<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4c8c2"
    tools:context=".EmotionalPromptsActivity">

  <Button
      android:id="@+id/button"
      android:layout_width="175dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:onClick="sendConv"
      android:text="@string/emconv"
      android:textAppearance="@style/Text"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button7" />

  <Button
      android:id="@+id/button3"
      android:layout_width="175dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:onClick="sendCheckin"
      android:text="@string/echeckin"
      android:textAppearance="@style/Text"
      app:layout_constraintBottom_toTopOf="@+id/button5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />

  <Button
      android:id="@+id/button5"
      android:layout_width="175dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:onClick="sendListen"
      android:text="@string/elisten"
      android:textAppearance="@style/Text"
      app:layout_constraintBottom_toTopOf="@+id/button6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button3" />

  <Button
      android:id="@+id/button6"
      android:layout_width="175dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:onClick="sendLogic"
      android:text="@string/elogic"
      android:textAppearance="@style/Text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button5" />

  <Button
      android:id="@+id/button7"
      android:layout_width="175dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:onClick="sendTime"
      android:text="@string/eqtime"
      android:textAppearance="@style/Text"
      app:layout_constraintBottom_toTopOf="@+id/button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/epheader"
      android:textAppearance="@style/TextHeader"
      app:layout_constraintBottom_toTopOf="@+id/button7"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>